x overflow fixed

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body{
 	font-family: monospace;
+	overflow: hidden;
 }
 .jcc{
 	display: flex;
@@ -143,19 +144,21 @@ h4{
 	background: #D0E6FF;
 }
 .noty{
-    background: #D0E6FF;
-    padding: 14px 0;
-    border-radius: 5px;
-    position: absolute;
-    transition: 0.5s;
-     right: -220px; 
-     top: 10px; 
-    width: 200px;
-    text-align: center;
-    border: 1px solid #ccc;
+	background: #D0E6FF;
+	padding: 14px 0;
+	border-radius: 5px;
+	position: absolute;
+	transition: 0.5s;
+	right: -220px; /* либо right: -100%; */
+	top: 10px; 
+	width: 200px;
+	text-align: center;
+	border: 1px solid #ccc;
+	visibility: hidden;
 }
 .noty.active{
+	visibility: visible;
 	right: 10px;
-    top: 10px;
-    transition: 0.5s;
+	top: 10px;
+	transition: 0.5s;
 }
